Update hats POST route, allow lost query argument (for reporting lost hats)
